--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@ body{
     display: flex;
     flex-direction: column;
     min-width: 100vh;
-    background-color: pink;
     font-family: 'Plus Jakarta Sans',sans-serif !important;
 }
 .container{
@@ -106,3 +105,56 @@ text-decoration: none;
 
 #map { height: 400px;
 width: 80vh; }
+
+
+.search-btn{
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+.search-btn:hover{
+    background-color: #fe424d;
+    color: #fff;
+  }
+.search-btn i{
+    margin-right: 0.5rem;
+    display: inline;
+  }
+.search-inp{
+    font-size: 1rem;
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+  }
+
+
+  #filters{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+  }
+  .filter{
+      text-align: center;
+      margin-right: 2rem;
+      margin-top: 2rem;
+      opacity: 0.7;
+  }
+  .filter:hover{
+      opacity: 1;
+      cursor: pointer;
+  }
+  .filter p {
+      font-size: 0.8rem   ;
+  }
+  .tax-info{
+      display: none;
+  }
+  .tax-toggle{
+      border: 1px solid black;
+      border-radius: 1rem;
+      height: 2.5rem;
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      margin-left: 2remrem;
+  }
