--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,37 +1,5 @@
 <%- layout("Layouts/boilerplate") %>
-    <style>
-        #filters{
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-        }
-        .filter{
-            text-align: center;
-            margin-right: 2rem;
-            margin-top: 2rem;
-            opacity: 0.7;
-        }
-        .filter:hover{
-            opacity: 1;
-            cursor: pointer;
-        }
-        .filter p {
-            font-size: 0.8rem   ;
-        }
-        .tax-info{
-            display: none;
-        }
-        .tax-toggle{
-            border: 1px solid black;
-            border-radius: 1rem;
-            height: 2.5rem;
-            padding: 1rem;
-            display: flex;
-            align-items: center;
-            margin-left: 2remrem;
-        }
-    </style>
-    <div id="filters">
+    <div id="filters" class="container-fluid">
         <div class="filter">
             <div>
              <i class="fa-solid fa-fire"></i>
