--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,7 +10,9 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img class="card-img-top show-img" src="<%= listing.image.url %>" alt="Listing_image">
   <div class="card-body">
-    <p class="card-text"><i> Owned By: <%= listing.owner.username %></i></p>
+    <p class="card-text">
+        <i>Owned By: <%= listing.owner ? listing.owner.username : "Unknown" %></i>
+      </p>
        <p> <%= listing.description %></p>
        <p> &#8377; <%= listing.price.toLocaleString("en-IN") %> </p>
        <p> <%= listing.country %></p>
