--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,12 +13,12 @@
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-inp" type="search" placeholder="Search Destinations" >
             <button class="btn search-btn" type="submit">
-              <i class="fa-solid fa-magnifying-glass"></i>Search</button>
+              <i class="fa-solid fa-paper-plane"></i></i>Search</button>
           </form>
 
         </div>
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="/listings/new">Wanderlust your Home</a>
+          <a class="nav-link" href="/listings/new"><b>Add Your Home!</b></a>
           <% if(!currUser){ %>
           <a class="nav-link " href="/Signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"> <b>Log in</b></a>
