--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-md border-bottom bg-body-light sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-paper-plane"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" >
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -13,7 +13,7 @@
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-inp" type="search" placeholder="Search Destinations" >
             <button class="btn search-btn" type="submit">
-              <i class="fa-solid fa-paper-plane"></i></i>Search</button>
+              <i class="fa-solid fa-magnifying-glass"></i>Search</button>
           </form>
 
         </div>
