--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -34,7 +34,25 @@
             <label for="location" class="form-label">location</label>
             <input type="text" name="Listing[location]" value="<%= listing.location %>"class="form-control">
         </div>
-
+        <div class="mb-3">
+            <label for="category" class="form-label">Category</label>
+            <select name="Listing[category]" class="form-control" required>
+                <option value="">Select Category</option>
+                <option value="Rooms" <%= listing.category === 'Rooms' ? 'selected' : '' %>>Rooms</option>
+                <option value="Iconic Cities" <%= listing.category === 'Iconic Cities' ? 'selected' : '' %>>Iconic Cities</option>
+                <option value="Mountains" <%= listing.category === 'Mountains' ? 'selected' : '' %>>Mountains</option>
+                <option value="Castle" <%= listing.category === 'Castle' ? 'selected' : '' %>>Castle</option>
+                <option value="Pools" <%= listing.category === 'Pools' ? 'selected' : '' %>>Pools</option>
+                <option value="Camp" <%= listing.category === 'Camp' ? 'selected' : '' %>>Camp</option>
+                <option value="Hangouts" <%= listing.category === 'Hangouts' ? 'selected' : '' %>>Hangouts</option>
+                <option value="Farms" <%= listing.category === 'Farms' ? 'selected' : '' %>>Farms</option>
+                <option value="Country Side" <%= listing.category === 'Country Side' ? 'selected' : '' %>>Country Side</option>
+                <option value="Adventure" <%= listing.category === 'Adventure' ? 'selected' : '' %>>Adventure</option>
+                <option value="Landscapes" <%= listing.category === 'Landscapes' ? 'selected' : '' %>>Landscapes</option>
+                <option value="Landmark" <%= listing.category === 'Landmark' ? 'selected' : '' %>>Landmark</option>
+            </select>
+            <div class="invalid-feedback">Please select a category.</div>
+        </div>
         <button class="btn btn-dark edit-btn mt-3">Edit</button>
         <br><br>
     </form>
