--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -76,7 +76,7 @@
 
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
     <% for(let listing of alllistings){ %>
-        <a href="/listings/<%= listing._id%>" class="listing-link <%= listing.category.replace(/\s+/g, '-') %>">
+        <a href="/listings/<%= listing._id %>" class="listing-link <%= listing.category ? listing.category.replace(/\s+/g, '-') : '' %>">
             <div class="card col listing-card">
                 <img src="<%= listing.image.url %>" class="card-img-top" alt="Listing_image" style="height:20rem"/>
                 <div class="card-img-overlay"></div>
